<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/toolbar"
                android:orientation="horizontal"
                android:paddingTop="4dp"
    >

    <ImageView
        android:id="@+id/selected_picture_iv_back"
        android:contentDescription="@string/Back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/back"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        />

    <ImageView
        android:id="@+id/selected_picture_iv_import"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:contentDescription="@string/SelectedImage"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/import_picture"
        android:layout_alignTop="@+id/selected_picture_iv_back"
        android:layout_toLeftOf="@+id/selected_picture_iv_export"
        android:layout_toStartOf="@+id/selected_picture_iv_export"/>

    <ImageView
        android:id="@+id/selected_picture_iv_export"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/Settings"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/export_picture"
        android:layout_alignTop="@+id/selected_picture_iv_import"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/deep_gray"
        android:contentDescription="@string/AppDivide"/>


</RelativeLayout>
