<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/settings_background"
    >

    <include layout="@layout/part_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp"
        android:text="@string/ChooseEvaluation"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/signature_tv_evaluation"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/app_button"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/Ok"
        android:textSize="12sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray"
        />

    <com.example.developerhaoz.ckwhiteboard.test.Doodle
        android:id="@+id/signature_doodle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/white"
        android:paddingBottom="8dp"
        >

        <Button
            android:id="@+id/signature_btn_reevaluate"
            android:layout_width="36dp"
            android:layout_height="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_button_reevaluate"
            android:src="@mipmap/ic_launcher"
            android:text="@string/ReEvaluate"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_alignBottom="@+id/signature_btn_confirm"
            android:layout_toLeftOf="@+id/signature_btn_confirm"
            android:layout_toStartOf="@+id/signature_btn_confirm"
            android:layout_alignTop="@+id/signature_btn_confirm"/>

        <Button
            android:id="@+id/signature_btn_confirm"
            android:layout_width="36dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_button_confirm"
            android:src="@mipmap/ic_launcher"
            android:text="@string/Confirm"
            android:textColor="@color/white"
            android:textSize="12sp"
            />


    </RelativeLayout>

</LinearLayout>




















