<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/preview_iv_team_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/preview_tv_team_name"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical"
            android:text="@string/TeamName"
            android:textSize="14sp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/preview_tv_team_introduce"
            android:layout_alignStart="@+id/preview_tv_team_introduce"/>


        <TextView
            android:id="@+id/preview_tv_team_introduce"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:gravity="center_vertical"
            android:text="@string/TeamIntroduceTem"
            android:textSize="14sp"
            android:layout_below="@+id/preview_tv_team_name"
            android:layout_toRightOf="@+id/preview_iv_team_avatar"
            android:layout_toEndOf="@+id/preview_iv_team_avatar"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/preview_tv_evaluation"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="32dp"
        android:paddingRight="10dp"
        app:paddingEnd="10dp"
        android:text="@string/Encourage"
        />

    <ImageView
        android:id="@+id/preview_iv_signature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/preview_tv_time"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/Time"
        />
</LinearLayout>